<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">XanderMobile</string>
    <string name="name_edit_hint">Enter your name</string>
    <string name="terms_radio_button">Agreed to terms</string>
    <string name="apply_button">Apply</string>
    <string name="apply_form_success_header">Welcome aboard</string>
    <string name="name_edit_error">Please enter valid name</string>
    <string name="agree_edit_error">You must agree to the right terms</string>
    <string name="action_search">Search</string>
    <string name="action_settings">Settings</string>
    <string name="clear_data">Clear fields</string>
    <string name="continue_registreation_button">Continue registration</string>
    <string name="provide_page_header">Now, :name, you must provide your contact information for us</string>
    <string name="send_form">Send</string>
    <string name="edit_error_empty">Please fill the field</string>
    <string name="error_write_to_file">Error occurred while writing to file</string>
    <string name="create_external_file">Create a new text file</string>
    <string name="create_external_file_just_registered">Now as previous step is done you can</string>
    <string name="you_contact_info_header">Your contact information</string>
    <string name="file_read_error">File read error</string>
    <string name="contact_info_error">Error while reading contact info file</string>
    <string name="ok">OK</string>
    <string name="new_file_edit_header">Enter new file content</string>
    <string name="new_file_path_header">Enter file name (will be saved to :path)</string>
    <string name="file_write_error">Writing file error</string>
    <string name="new_file_error">Error while writing your new file</string>
</resources>
