<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
        >
    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:hint="@string/name_edit_hint"
              android:id="@+id/name_edit"/>
    <TextView android:layout_width="match_parent"
              android:text="@string/name_edit_error"
              android:id="@+id/name_error"
              android:layout_height="wrap_content"/>
    <RadioButton android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/terms_radio_button"
                 android:id="@+id/terms_radio"/>
    <TextView android:layout_width="match_parent"
              android:text="@string/agree_edit_error"
              android:id="@+id/terms_error"
              android:layout_height="wrap_content"/>
    <Button android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apply_button"
            android:onClick="sendApplyForm"/>
</LinearLayout>

